--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,33 @@ h1 {
     color: blue;
     text-align: center;
   }
+
+  /* Add a black background color to the top navigation */
+.nav_bar {
+  background-color: #f5f4f4;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.nav_bar a {
+  float: left;
+  color: #272727;
+  text-align: center;
+  padding: 10px 16px;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+/* Change the color of links on hover */
+.nav_bar a:hover {
+  text-decoration: underline;
+  text-decoration-color: green;
+}
+
+/* Add a color to the active/current link 
+.nav_bar a.active {
+  background-color: #04AA6D;
+  color: white;
+  
+}
+*/
