--- a/FrontEnd/styles.css
+++ b/FrontEnd/styles.css
@@ -7,22 +7,31 @@ h1 {
 .nav_bar {
   background-color: #f5f4f4;
   overflow: hidden;
+  float: center;
+  width: 98%;
+  margin-left: 1%;
+  margin-bottom: 2%
+
 }
 
 /* Style the links inside the navigation bar */
 .nav_bar a {
-  width: 10%;
+  width: 20%;
+  height: 35px;
   float: left;
   color: #272727;
   text-align: center;
-  padding: 2% 5%;   /* Padding 2% Top e bottom, 5% left e right*/
+  padding-top: 2%;
+  padding-bottom: 2%;
+  text-align: center;
+  font-size: larger;
   text-decoration: none;
-  font-size: 20px;
+  box-shadow: inset 0 0 0 0 rgb(184, 184, 184);
 }
 
 /* Change the color of links on hover */
 .nav_bar a:hover {
-  text-decoration:underline;
+  box-shadow: inset 2000px 0 0 0 rgb(184, 184, 184);
   text-decoration-color: green;
 }
 
@@ -35,10 +44,10 @@ h1 {
 */
 
 .footer {
-  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
+  height: 5%;
   background-color: #272727;
   color: white;
   text-align: center;
