--- a/FrontEnd/styles.css
+++ b/FrontEnd/styles.css
@@ -1,36 +1,77 @@
+body {
+  width: 98%;
+  margin-left: 1%;
+  margin-bottom: 1%;
+}
+
 h1 {
     color: blue;
     text-align: center;
   }
 
   /* Add a black background color to the top navigation */
-.nav_bar {
-  background-color: #f5f4f4;
-  overflow: hidden;
-  float: center;
-  width: 98%;
-  margin-left: 1%;
-  margin-bottom: 2%
-
-}
-
-/* Style the links inside the navigation bar */
-.nav_bar a {
-  width: 20%;
-  height: 35px;
-  float: left;
-  color: #272727;
-  text-align: center;
-  padding-top: 2%;
-  padding-bottom: 2%;
-  text-align: center;
-  font-size: larger;
-  text-decoration: none;
-  box-shadow: inset 0 0 0 0 rgb(184, 184, 184);
-}
+  .nav_bar {
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  .nav_bar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  .dropdown {
+    float: left;
+    overflow: hidden;
+  }
+  
+  .dropdown .dropbtn {
+    font-size: 16px;  
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+  
+  .nav_bar a:hover, .dropdown:hover .dropbtn {
+    background-color: red;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
 
 /* Change the color of links on hover */
-.nav_bar a:hover {
+.nav_bar a:hover, .dropdown0:hover .dropbtn1 {
   box-shadow: inset 2000px 0 0 0 rgb(184, 184, 184);
   text-decoration-color: green;
 }
@@ -51,7 +92,7 @@ h1 {
   background-color: #065670;
 }
 
-.nf{
+.newsfeed_column{
   width: 25%;
   height: 300px;
   float: left;
