--- a/styles.css
+++ b/styles.css
@@ -134,3 +134,61 @@ h1 {
   color: white;
   text-align: center;
 }
+
+/* CSS do POPUP para alterar vaga */
+
+/*{box-sizing: border-box;}*/
+
+/* Button used to open the contact form - fixed at the bottom of the page 
+.open-button {
+  background-color: #555;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  position: fixed;
+  bottom: 23px;
+  right: 28px;
+  width: 280px;
+} 
+*/
+
+/* The popup form - hidden by default */
+.alterar_popup {
+  display: none;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+  position: absolute;
+  top: 50%;
+  left: 40%;
+}
+
+/* Add styles to the form container */
+.alterar_cont {
+  max-width: 300px;
+  padding: 10px;
+  background-color: rgb(255, 4, 4);
+}
+
+/* Set a style for the submit/login button */
+.alterar_cont .btn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  background-color: red;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
+}
