--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,8 @@ h1 {
   .nav_bar {
     overflow: hidden;
     background-color: #333;
+    border-radius: 5px;
+
   }
 
   .nav_bar a {
@@ -87,7 +89,7 @@ h1 {
 
 .double_column {
   width: 42%;
-  
+  border-radius: 5px;
   background-color: #0c6886;
   float: left;
   margin: 2%; 
@@ -110,8 +112,8 @@ h1 {
 .double_column .login_form {
   float: left;
   text-align: left;
-  margin-left: 35%;
-  width: 60%;
+  width: 70%;
+  padding-left: 15%;
   height: fit-content;
 
 }
@@ -119,8 +121,7 @@ h1 {
 .double_column .registo_form {
   float: left;
   text-align: left;
-  margin-left: 20%;
-  width: 60%;
+  width: 100%;
   height: fit-content;
 }
 
@@ -137,6 +138,13 @@ h1 {
   opacity: 0.9;
 }
 
+input {
+  border-radius: 5px;
+  border: none;
+  border-radius: 4px;
+  width: 96%;
+  padding: 3px 3px;
+}
 
 .newsfeed {
   width: 96%;
@@ -144,6 +152,8 @@ h1 {
   overflow: hidden;
   float: center;
   background-color: #065670;
+  border-radius: 5px;
+
 }
 
 .newsfeed_column{
@@ -162,6 +172,8 @@ h1 {
   background-color: #272727;
   color: white;
   text-align: center;
+  border-radius: 5px;
+
 }
 
 .left {
