--- a/chatbot/chat.css
+++ b/chatbot/chat.css
@@ -142,17 +142,42 @@
 }
 
 .first_questions {
-    color: #6eefef;
-    background-color: #ffffff;
+    /* color: #6eefef;
+    background-color: #ffffff; */
     display: inline-block;
     padding: 10px 20px;
-    font-size: 16px;
+    /* font-size: 16px;
     font-weight: normal;
     text-align: center;
     text-transform: uppercase;
     border-radius: 5px;
     border: none;
     cursor: pointer;
+    margin-right: 30px; */
+}
+
+.button_layout {
+    font-weight: normal;
+    text-align: center;
+    /* text-transform: uppercase;
+    border-radius: 5px;
+    border: 3px;
+    cursor: pointer; */
+    cursor: pointer;
+    padding: 8px;
+    width: 180px;
+    /* text-align: left; */
+    outline: none;
+    font-size: 18px;
+    border-radius: 10px 10px 10px 10px;
+    color: #18d7b7;
+    background-color: #ffffff;
+    margin-right: 20px;
+    transition: opacity 0.1s ease-in-out; /* add transition effect */
+} 
+
+.button_layout:hover{
+    opacity: 0.8;
 }
 
 @keyframes floatup {
