--- a/chatbot/chat.css
+++ b/chatbot/chat.css
@@ -91,7 +91,7 @@
     float: left;
     border: none;
     box-sizing: border-box;
-    width: 100%;
+    width: 105%;
     border-radius: 10px;
     padding: 10px;
     font-size: 16px;
@@ -174,6 +174,7 @@
     background-color: #ffffff;
     margin-right: 20px;
     transition: opacity 0.1s ease-in-out; /* add transition effect */
+    /* animation: floatup .5s forwards */
 } 
 
 .button_layout:hover{
