Website com o novo template a 70%

--- a/style.css
+++ b/style.css
@@ -356,7 +356,7 @@ img {
 .medilife-appoint-btn {
   display: inline-block;
   color: #ffffff;
-  background-color: #ff0000;
+  background-color: #281c56;
   height: 50px;
   padding: 0 15px;
   line-height: 50px;
