--- a/style.css
+++ b/style.css
@@ -1644,3 +1644,85 @@ textarea {
       color: #ffffff; }
 
 /*# sourceMappingURL=style.css.map */
+
+.skrr-container {
+  max-width:350px;
+  margin:auto;
+  border-radius:5px;
+  background:#006cff;
+  padding:20px;
+    /* position: relative;
+    display: flex;
+    justify-content: center;
+    min-width: 250px;
+    height: 50px; */
+}
+
+.skrr-box {
+  width:100%;
+  /*padding:12px 20px;*/
+  padding:0 30px 0 15px;
+  margin:8px 0;
+  display:inline-block;
+  border:1px solid #ccc;
+  border-radius:4px;
+  box-sizing: border-box;
+  /* border: none;
+  appearance: none;
+  padding: 0 30px 0 15px;
+  width: 50%;
+  color: rgb(0, 0, 0);
+  background-color: #006cff;
+  font-size: 20px; */
+}
+
+.submeter {
+  width:100%;
+  background:#281c56;
+  color:white;
+  padding:14px 20px;
+  margin:8px 0;
+  border:none;
+  border-radius:4px;
+  cursor:pointer;
+}
+
+.submeter:hover{
+  background:#000
+}
+
+.content-table {
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  min-width: 500px;
+  background-color: rgb(0, 108, 255, 0.5);
+}
+
+.content-table thead {
+  background-color: #281c56;
+  color: white;
+  text-align: left;
+  font-weight: bold;
+}
+
+.touch {
+  background-color: white;
+  color: black;
+  padding: 20px;
+  transition: background-color 0.2s;
+}
+
+/* Define styles for the element when it's touched */
+.touch:hover {
+  filter: contrast(0.8);
+}
+
+.touch.on {
+  background-color: greenyellow;
+}
+/*.touch:active{
+  background-color: rgb(220, 220, 220);
+}*/
+
+
