--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@ img {
       line-height: 46px; } }
 
 .section-padding-100 {
-  padding: 100px 0; }
+  padding: 30px 0; }
 
 .section-padding-50 {
   padding: 50px 0; }
@@ -684,7 +684,7 @@ img {
   border-radius: 0;
   font-size: 14px;
   font-style: italic;
-  color: #ffffff;
+  color: #2b2b2b;
   margin-bottom: 30px;
   font-weight: 500;
   padding: 0 15px;
